added navbar. Fixed lots of issues
